fix(sheet-cell): position label